Update 'security your email account' web page

--- a/manual/sec_email_acct.html
+++ b/manual/sec_email_acct.html
@@ -59,7 +59,7 @@
           Always clear web browser history after access your email account. The most convenient way for it is to use Firefox access your email account to get
           the SMS login mail, then use the same browser to access SMS messaging site. Therefore, as you quit Firefox, entire web surfing history will be cleared.<br>
           <br>
-          <b>Note: Use 'open link in new window' to access your SMS messaging site, so that you have chance to delete and purge the mail record on your email
+          <b>Note: Use 'open link in new tab' to access your SMS messaging site, so that you have chance to delete and purge the mail record on your email
           account, and then logout your email account.</b>
         </td>
       </tr>
