Update SMS server program source files and user guide.

--- a/manual/sec_email_acct.html
+++ b/manual/sec_email_acct.html
@@ -14,7 +14,7 @@
       <tr>
         <td width=30% align=left valign=center><a href="sec_your_device.html" title="Secure your device"><img src="left-arrow-green.png" height=80px></a></td>
         <td align=center valign=center><a href="user_guide.html" title="Home"><img src="home.png" height=90px"></a></td>
-        <td width=30%>&nbsp;</td>
+        <td width=30% align=right valign=center><a href="feature_list.html" title="Feature list"><img src="right-arrow-green.png" height=80px></a></td>
       </tr>      
       </table>  
     </td>
@@ -90,7 +90,7 @@
       <tr>
         <td width=30% align=left valign=center><a href="sec_your_device.html" title="Secure your device"><img src="left-arrow-green.png" height=80px></a></td>
         <td align=center valign=center><a href="user_guide.html" title="Home"><img src="home.png" height=90px"></a></td>
-        <td width=30%>&nbsp;</td>
+        <td width=30% align=right valign=center><a href="feature_list.html" title="Feature list"><img src="right-arrow-green.png" height=80px></a></td>
       </tr>      
       </table>  
     </td>
