--- a/manual/sec_your_device.html
+++ b/manual/sec_your_device.html
@@ -61,8 +61,7 @@
       <tr>
         <td width=10px valign=top>2.</td>
         <td>
-          Select those smartphones preloaded with most updated operating system, and their manufacturer also provide regular security patch, such as Google Pixel,
-          Nokia 8.1, etc.
+          Select those smartphones preloaded with most updated operating system, and their manufacturer also provide regular security patch, such as Google Pixel.
         </td>
       </tr>
       
