--- a/manual/user_guide.html
+++ b/manual/user_guide.html
@@ -276,6 +276,40 @@
       </tr>      
       </table>
     </td>
+  </tr>
+  
+  <tr><td colspan=2>&nbsp;</td></tr>
+
+  <tr>
+    <td width=20>6.</td>
+    <td><b>Configure Login Decoy Site</b></td>
+  </tr>
+  
+  <tr>
+    <td></td>
+    <td>
+      <table class=table cellspacing=1 cellpadding=1>
+      <tr>
+        <td width=30>6.1</td>
+        <td><a href="feature_list.html">Feature list</a></td>
+      </tr>
+
+      <tr>
+        <td width=30>6.2</td>
+        <td><a href="feature_add.html">Add feature</a></td>
+      </tr>
+      
+      <tr>
+        <td width=30>6.3</td>
+        <td><a href="feature_edit.html">Edit feature</a></td>
+      </tr>
+      
+      <tr>
+        <td width=30>6.4</td>
+        <td><a href="feature_delete.html">Delete feature</a></td>
+      </tr>      
+      </table>
+    </td>
   </tr>  
   </table>
 </body>
