Update SMS installation guide.

--- a/manual/install_guide.html
+++ b/manual/install_guide.html
@@ -352,7 +352,7 @@
       and three questions. Figure 12 provides you an example.<br>
       <br>
       <b>Note:</b><br>
-      This step is often failure (Figure 13), but don't worry, you can repeat this process later after intallation by running<br>
+      This step may sometimes fail (Figure 13), but don't worry, you can repeat this process later after installation by running<br>
       the below command to subscribe SSL certificates again:<br>
       <br>
       # <font color='darkblue'><b>certbot --apache</b></font><br>
